# sagemcom-f3896-py

./: Dockerfile  README.md  pyproject.toml
sagemcom_f3896_client/: client.py
