[tool.poetry]
name = "sagemcom-f3896-client"
version = "0.6.2"
description = "Sagemcom F3896 exporter"
authors = ["Ties de Kock <ties@tiesdekock.nl>"]
readme = "README.md"
# This ensures poetry finds your code even if it's in the root or a src folder
packages = [{include = "sagemcom_f3896_client"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
aiohttp = "^3.9.4"
prometheus-async = {extras = ["aiohttp"], version = "^22.2.0" }

[tool.poetry.scripts]
f3896-cli = "sagemcom_f3896_client.cli:cli"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.0.0"
black = "^24.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
twine = "^5.0.0"
check-manifest = "^0.49"
pytest-cov = "^4.1.0"
pytest-xdist = "^3.6.1"
ruff = "^0.3.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]

[tool.pytest.ini_options]
junit_family = "xunit2"
